# RapidRabbit

./: consumer.py  consumer_email.py  consumer_sms.py  producer.py  pyproject.toml
